--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <bcn-calendar></bcn-calendar>
+    <bcn-dayofweek></bcn-dayofweek>
     <script type="module" src="src/index.js"></script>
 </body>
 </html>
